function 8 best sellers, top 6 category

--- a/src/app/admin/admin-page/admin-page.component.html
+++ b/src/app/admin/admin-page/admin-page.component.html
@@ -63,6 +63,7 @@
         <div class="chart-container col-8">
           <canvas id="MyChart">{{ chart }}</canvas>
         </div>
+        <button (click)="test()">Test Init BillRp function</button>
       </div>
     </nz-content>
     <nz-footer>Ant Design ©2020 Implement By Angular</nz-footer>
