--- a/src/app/checkout-page/review-item/review-item.component.html
+++ b/src/app/checkout-page/review-item/review-item.component.html
@@ -8,7 +8,7 @@
       [nzStyle]="{ backgroundColor: '#fff', color: '#999', boxShadow: '0 0 0 1px #d9d9d9 inset' }"></nz-badge>
     </span>
     <span>
-      {{ bookItem.totalPrice }}
+      {{ bookItem.totalPrice | currency }}
     </span>
   </span>
 </p>
