--- a/src/app/admin/admin-page/admin-page.component.html
+++ b/src/app/admin/admin-page/admin-page.component.html
@@ -65,40 +65,60 @@
         </div>
 
         <div class="row d-flex justify-content-around mt-1">
-
-          <div class="chart-container right-element">
-            <div class="row chart-card">
-              <div class="component tripple">
-                <div class="chart-card_title">Total Profits</div>
-                <div class="chart-card_info">$95,595</div>
-              </div>
-              <div class="component tripple">
-                <div class="chart-card_title">Total Expenses</div>
-                <div class="chart-card_info">$12,789</div>
-              </div>
-              <div class="component tripple">
-                <div class="chart-card_title">Current Users</div>
-                <div class="chart-card_info">212</div>
-              </div>
-            </div>
-            <div class="component">
-              <canvas id="salesChart">{{ salesChart }}</canvas>
-            </div>
-          </div>
-
-          <div class="left-element component top-selling-container">
-            <h4 class="top-selling_header">Top Selling Products</h4>
-            <ul class="top-sellers-list">
-              <li class="row top-seller_item">
-                <div class="col-4 item-image">
-                  <img class="img-fluid" src="https://images-eu.ssl-images-amazon.com/images/I/81OvOzDu3fL._AC_UL600_SR600,600_.jpg" alt="">
+          <div class="right-element">
+            <div class="profit-info-chart">
+              <div class="row chart-card">
+                <div class="component tripple">
+                  <nz-statistic [nzValue]="'$' + (95.595 | number)!" [nzTitle]="'Total Profits'"></nz-statistic>
                 </div>
-                <div class="col-6">The Pivot Year</div>
-                <div class="col-2">941$</div>
-              </li>
-            </ul>
+                <div class="component tripple">
+                  <nz-statistic [nzValue]="'$' + (12.789 | number)!" [nzTitle]="'Total Expenses'"></nz-statistic>
+                </div>
+                <div class="component tripple">
+                  <nz-statistic [nzValue]="(212 | number)!" [nzTitle]="'Current Users'"></nz-statistic>
+                </div>
+              </div>
+
+              <div class="component">
+                <canvas id="salesChart">{{ salesChart }}</canvas>
+              </div>
+            </div>
+
+            <div class="upcoming-events component component-seperate">
+              <h5 class="upcoming-events_title">Upcoming Events</h5>
+              <ul class="upcoming-events_list">
+                <li *ngFor="let item of topProducts" class="row event-item">
+                  <span class="col-1" nz-icon nzType="calendar" nzTheme="outline"></span>
+                  <div class="col-3">08 JUN, TUE</div>
+                  <div class="col-8">Meeting with partners</div>
+                </li>
+              </ul>
+              <button class="more-detail-btn upcoming-detail-btn">See All</button>
+            </div>
           </div>
 
+          <div class="left-element">
+            <div class="component top-selling-container">
+              <h5 class="top-selling_header">Top Selling Products</h5>
+              <ul class="top-sellers-list">
+                <li *ngFor="let item of topProducts" class="row top-seller_item">
+                  <span class="col-1" nz-icon nzType="star" nzTheme="twotone" [nzTwotoneColor]="'#FFD700'"></span>
+                  <div class="col-8">{{ item.book.name }}</div>
+                  <div class="col-3 item_sales">{{ item.book.price * item.quantity | currency}}</div>
+                </li>
+              </ul>
+            </div>
+
+            <div class="categories-container component component-seperate">
+              <h5 class="categories-header">Popular Categories</h5>
+              <div>
+                <canvas id="categoryChart">{{ categoryChart }}</canvas>
+                <div class="total-books-sold">
+                  {{ totalBooksSold }} Books Sold
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
 
         <!-- <button (click)="test()">Test Init BillRp function</button> -->
