--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 /* @import "~ng-zorro-antd/style/index.min.css";
 @import "~ng-zorro-antd/button/style/index.min.css"; */
+
+.more-detail-btn{
+  padding: 8px 21px;
+  border-radius: 4px;
+  background-color: #c4c6ca;
+  border: none;
+  font-weight: 500;
+}
+
+.more-detail-btn:active{
+  opacity: 0.8;
+}
