--- a/src/app/admin/admin-page/products-manage/products-manage.component.css
+++ b/src/app/admin/admin-page/products-manage/products-manage.component.css
@@ -1,3 +1,12 @@
+.inner-content{
+  /* max-height: 100vh; */
+  /* overflow: auto; */
+}
+
+.checkbox-heading{
+  width: 30px;
+}
+
 .search-box {
   padding: 8px;
 }
